k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: shared-persistent-volume-claim
      containers:
        - name: quizstream-api
          image: andreasx42/quizstream-api:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: api-storage
              mountPath: api/tmp
              subPath: tmp
