k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      volumes:
        - name: frontend-storage
          persistentVolumeClaim:
            claimName: shared-persistent-volume-claim
      containers:
        - name: quizstream-app
          image: andreasx42/quizstream-app:latest
          # env:
          #   - name: API_URL
          #     value: http://35.225.79.33/api/v1
          #   - name: API_PROV
          #     valueFrom:
          #       secretKeyRef:
          #         name: pgsecrets
          #         key: API_PROV
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-storage
              mountPath: app/tmp
              subPath: tmp
