k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: shared-persistent-volume-claim
      containers:
        - name: quizstream-backend
          image: andreasx42/quizstream-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: backend-storage
              mountPath: backend/tmp
              subPath: tmp
