k8s/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgadmin
  template:
    metadata:
      labels:
        component: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:8.10
          ports:
            - containerPort: 80
