k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 4040
      targetPort: 80
